# NessHomeTask

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  Dockerfile  INSTALLATION.md  Makefile  PROJECT_FILES.md  README.md  TESTING.md  TESTS_AND_FILES_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  pytest_results.txt  render.yaml  test_ai_metadata.txt  test_debug.txt  test_results.txt  test_results_after_removal.txt  test_upload.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: c8aa2c9c2766_initial_migration_create_assets_and_.py
scripts/: db_management.py  seed_sample_data.py  start.sh
src/: __init__.py
src/api/: routes.py  schemas.py
src/app/: main.py
src/app/static/: docs.html  index.html
src/core/: config.py  database.py  exceptions.py  logging_config.py
src/integrations/: gemini_client.py  local_vision.py  openai_client.py
src/models/: asset.py
src/repositories/: asset_repository.py
src/services/: ai_service.py  asset_service.py  search_service.py
src/utils/: file_validator.py  helpers.py  text_extractor.py
tests/: conftest.py  test_ai_service.py  test_api_endpoints.py  test_data_layer.py  test_database.py  test_local_vision.py  test_routes.py  test_search_service.py  test_services.py  test_text_extractor.py
