[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "giladeldor",email = "giladeldor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-app = "poetry.core.masonry.api"
